Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
Linux (Ubuntu 16.04)
Description
I receive the following error after upgrading to pyarrow 0.8.0 when writing to a dataset:
- ArrowIOError: Column 3 had 187374 while previous column had 10000
The command was:
write_table_values =
pq.write_to_dataset(pa.Table.from_pandas(df, preserve_index=True), '/logs/parsed/test', partition_cols=['Product', 'year', 'month', 'day', 'hour'], **write_table_values)
I've also tried write_table_values =
{'chunk_size': 10000}and received the same error.
This same command works in version 0.7.1. I am trying to troubleshoot the problem but wanted to submit a ticket.
Attachments
Attachments
Issue Links
- links to